--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.5'
+    }
+}
+
 apply plugin: 'groovy'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 
 group = 'gradleperf'
 version = '1.0-SNAPSHOT'
@@ -6,4 +17,22 @@ version = '1.0-SNAPSHOT'
 dependencies {
     compile gradleApi()
     compile localGroovy()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
+bintray {
+    user = project.hasProperty('bintrayUsername') ? project.getProperty('bintrayUsername') : ''
+    key = project.hasProperty('bintrayKey') ? project.getProperty('bintrayKey') : ''
+    publications = ['mavenJava']
+    pkg {
+        repo = 'maven'
+        name = 'gradle-perf'
+    }
 }
