--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'gradleperf'
-version = '1.0.1'
+version = '1.0.2-SNAPSHOT'
 
 dependencies {
     compile gradleApi()
