--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'gradleperf'
-version = '1.1.0'
+version = '1.2.0-SNAPSHOT'
 
 dependencies {
     compile gradleApi()
